# A2TilbudsBot

./: .gitignore  LastNedTilbudene.py  LastOppTilbudsbase.py  LastOppTrial.py  ProsesserOgLastOppTilbudene.py  README.md  code.html  consultant-dashboard.html  consultant-dashboard3.html  kompetansekrav.csv  konsulentanalyse.html  pyproject.toml  rekategoriser.py
BACKUP/: kompetansekrav.csv  korrigerte_kompetansekrav.csv
sharepoint_fields/: __init__.py  requestSharepointFields.py
