[tool.poetry]
name = "A2TilbudsBot"
version = "0.1.0"
description = ""
authors = ["Eirik Y. Øra <eor@a-2.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 || ^3.11"
openai = "^1.3.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.develop.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
